Fixed vertical spacing bug on spot details pane

--- a/resources/sass/front/_details.scss
+++ b/resources/sass/front/_details.scss
@@ -1,6 +1,6 @@
 .spot-slideout {
     background:#fff;
-
+    height:100%;
     border-left: 1px solid #D0D2D4;
     box-sizing: border-box;
     box-shadow: 0px 5px 9px rgba(31, 32, 65, 0.1);
